--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env: 
+          TURBO_TOKEN: g6LbYQ4s6jX6M6JlHCAj5J2S
+          TURBO_TEAM: caf3z1n
 
       - name: Deploy storybook
         working-directory: ./packages/docs
